--- a/index.yaml
+++ b/index.yaml
@@ -1,15 +1,18 @@
-- apiVersion: v1
-    appVersion: 0.14.0
-    created: "2023-12-15T01:05:07.691774+06:00"
-    description: Harbor scanner adapter for KhulnaSoft Enterprise scanner
-    digest: 848d6abe7085e6648c785b38964698c331027d37
-    keywords:
-    - scanner
-    - harbor
-    - vulnerability
-    name: harbor-scanner-khulnasoft
-    sources:
-    - https://github.com/khulnasoft/harbor-scanner-khulnasoft
-    urls:
-    - https://github.com/khulnasoft/helm-charts/releases/download/harbor-scanner-khulnasoft-0.14.0/harbor-scanner-khulnasoft-0.14.0.tgz
-    version: 0.14.0
+apiVersion: v1
+entries:
+  harbor-scanner-khulnasoft:
+    - apiVersion: v1
+      appVersion: 0.14.0
+      created: "2023-12-15T01:05:07.691774+06:00"
+      description: Harbor scanner adapter for KhulnaSoft Enterprise scanner
+      digest: 848d6abe7085e6648c785b38964698c331027d37
+      keywords:
+        - scanner
+        - harbor
+        - vulnerability
+      name: harbor-scanner-khulnasoft
+      sources:
+        - https://github.com/khulnasoft/harbor-scanner-khulnasoft
+      urls:
+        - https://github.com/khulnasoft/helm-charts/releases/download/harbor-scanner-khulnasoft-0.14.0/harbor-scanner-khulnasoft-0.14.0.tgz
+      version: 0.14.0
